cluster/apps/networking/traefik/external/unraid/fish/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: fish
  namespace: external
subsets:
  - addresses:
      - ip: 192.168.102.49
    ports:
      - name: default
        port: 8282
        protocol: TCP
