cluster/apps/networking/traefik/external/unraid/fish/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    hajimari.io/icon: key
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-secured-chain@kubernetescrd
  name: fish
  namespace: external
spec:
  ingressClassName: traefik
  rules:
    - host: "${SECRET_FISH_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: fish
                port:
                  number: 8282
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "${SECRET_FISH_DOMAIN}"
      secretName: fish-tls
